Unreleased 2021-09-16 msfninja <msfninja@airmail.cc>:
	
	Note:
	Initiation of project. Summing up all development from its creation to the date of this release.

	Added:
	 - Client
	   * A web application accessible from any device (featuring a PWA) to interact with your data
	 - Server
	   * A server that handles the whole thing
	 - CLI
	   * A CLI (server-side) that can perform numerous tasks